--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "homepage": "https://carolunita.github.io/Clicky-Game/",
+  "homepage": "https://carolunita.github.io/Clicky-Pusheen/",
   "browserslist": [
     ">0.2%",
     "not dead",
